[gd_scene load_steps=2 format=2]

[ext_resource path="res://view/person_votes_control.gd" type="Script" id=1]

[node name="PersonVotesControl" type="PanelContainer"]
margin_right = 441.0
margin_bottom = 239.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 446.0
margin_bottom = 428.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 433.0
margin_bottom = 415.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 427.0
margin_bottom = 31.0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
margin_top = 8.0
margin_right = 96.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Person's Name"

[node name="PenaltyLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 100.0
margin_right = 349.0
margin_bottom = 31.0
text = "Penalidade:
(0 = nenhuma, 6 = penalidade máxima)"
align = 2

[node name="PenaltySpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 353.0
margin_right = 427.0
margin_bottom = 31.0
max_value = 6.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 427.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 8

[node name="VotesEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 209.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="VotesConferenceMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 217.0
margin_right = 427.0
margin_bottom = 300.0
size_flags_horizontal = 3
custom_constants/margin_top = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VotesConference" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VotesConferenceMargin"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/line_spacing = 4

[node name="ErrorMessage" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 427.0
margin_bottom = 361.0
custom_colors/font_color = Color( 1, 0.211765, 0, 1 )
text = "Error message."
autowrap = true

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 369.0
margin_right = 150.0
margin_bottom = 409.0
rect_min_size = Vector2( 150, 40 )
hint_tooltip = "O progresso já é salvo quando você avança ou volta nas telas, mas clica aqui pra salvar agora se quiser."
size_flags_horizontal = 0
text = "Salvar"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Header/PenaltySpinBox" to="." method="_on_PenaltySpinBox_value_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VotesEdit" to="." method="_on_VotesEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
